# libtorch-faster-rcnn

./: CMakeLists.txt  README.md  test.cpp  train.cpp
configs/: faster_rcnn_r50_fpn_1x_voc.json
cvops/: CMakeLists.txt  ROIAlign.h  ROIPool.h  cvops.h  nms.h  vision_cpu.h  vision_cuda.h
data/: voc2007test.json  voc2007trainval.json
frcnn/: CMakeLists.txt  anchor.cpp  anchor.hpp  atss.cpp  atss.hpp  backbones.cpp  backbones.hpp  bbox.cpp  bbox.hpp  data.cpp  data.hpp  detectors.cpp  detectors.hpp  json.hpp  losses.cpp  losses.hpp  necks.cpp  necks.hpp  rcnn_head.cpp  rcnn_head.hpp  rpn_head.cpp  rpn_head.hpp  trainer.cpp  trainer.hpp  utils.cpp  utils.hpp
